Fri Jun 18 15:49:17 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CCF/Documentation/Build.html:

	  Cleaned links up a bit.

Fri Jun 18 14:39:39 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/tests/NodeApplicationTest/NodeAppTest.mpc: 

	  CIAO_Container is added as an "after" dependency for the
	  NodeAppTest_RoundTrip_stub.

Fri Jun 18 14:14:12 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* examples/OEP/BasicSP/README.html: 

	  Moved the file from Display directory to BasicSP directory.

Fri Jun 18 14:05:27 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* examples/OEP/Display/README.html: 

	  The file describing how to build and run the example according to
	  the new DnC spec is added.

Fri Jun 18 13:34:16 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DomainApplicationManager/DomainApplicationManager.mpc
	* ExecutionManager/ExecutionManager.mpc
	* NodeManager/NodeDaemon.mpc
	* RepositoryManager/Repository_Manager.cpp

          Fixed linking problems in Windows. Added debug/test
          capabilities by remotely shutdown ExecutionManager.


Fri Jun 18 11:59:56 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* docs/tutorial/Hello/hello_exec.cpp:
	* docs/tutorial/Hello/hello_exec.h:
	  Updated these files to follow up the changes in CIDLC.

Fri Jun 18 11:56:09 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/RepositoryManager/Update_Plan.cpp:
        * DnC/RepositoryManager/Update_Plan.h:

          Helper files to update the deployment plan from the package
          configuration IDL data structure.

          Made changes to follow DOC group standard of never a function
          more than a page.

Fri Jun 18 09:36:13 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* CCF/Documentation/Build.html:

	  Updated the file with a link to Win32 zip files for the Utility
	  library.

Thu Jun 17 16:59:21 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/RepositoryManager/RepositoryManager.mpc: