@@ -1,3 +1,9 @@
+Fri Jun 18 16:18:42 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        * DnC/RepositoryManager/Update_Plan.cpp:
+
+          Added comments in the code to assist code review.
+
 Fri Jun 18 15:49:17 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* CCF/Documentation/Build.html:
@@ -6,20 +12,20 @@ Fri Jun 18 15:49:17 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 Fri Jun 18 14:39:39 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>
 
-	* DnC/tests/NodeApplicationTest/NodeAppTest.mpc: 
+	* DnC/tests/NodeApplicationTest/NodeAppTest.mpc:
 
 	  CIAO_Container is added as an "after" dependency for the
 	  NodeAppTest_RoundTrip_stub.
 
 Fri Jun 18 14:14:12 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>
 
-	* examples/OEP/BasicSP/README.html: 
+	* examples/OEP/BasicSP/README.html:
 
 	  Moved the file from Display directory to BasicSP directory.
 
 Fri Jun 18 14:05:27 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>
 
-	* examples/OEP/Display/README.html: 
+	* examples/OEP/Display/README.html:
 
 	  The file describing how to build and run the example according to
 	  the new DnC spec is added.
